develop action adding

--- a/ListOfDeal/MainWindow.xaml
+++ b/ListOfDeal/MainWindow.xaml
@@ -1,15 +1,22 @@
-﻿<Window xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" 
+﻿<dx:DXWindow xmlns:dxg="http://schemas.devexpress.com/winfx/2008/xaml/grid" 
         xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core" 
         x:Class="ListOfDeal.MainWindow"
         xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
             xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
+        xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+         xmlns:local="clr-namespace:ListOfDeal"
         Title="MainWindow" Height="700" Width="1200">
+    <Window.Resources>
+        <dxmvvm:ObjectToBooleanConverter x:Key="objToBoolConverter"/>
+    </Window.Resources>
     <Grid>
         <dx:DXTabControl>
             <dx:DXTabItem Header="Enter new project">
                 <dxlc:LayoutGroup Orientation="Vertical">
+                    <dxlc:LayoutGroup>
+                    <dxlc:LayoutGroup Orientation="Vertical" x:Name="ProjectsGroup">
                     <dxlc:LayoutItem Label="Name:">
                         <dxe:TextEdit EditValue="{Binding CurrentProject.Name}"/>
                     </dxlc:LayoutItem>
@@ -24,7 +31,33 @@
                     </dxlc:LayoutItem>
                     <Button Content="Add project" Command="{Binding AddNewProjectCommand}" Height="20"/>
                     <Button Content="test" Click="Button_Click" Height="20"/>
-                    <dxg:GridControl ItemsSource="{Binding Projects}">
+                    </dxlc:LayoutGroup>
+                    <dxlc:LayoutGroup Orientation="Vertical" x:Name="ActionGroup" IsEnabled="{Binding SelectedProject,Converter={StaticResource objToBoolConverter}}">
+                        <dxlc:LayoutItem Label="Name:">
+                            <dxe:TextEdit EditValue="{Binding CurrentAction.Name}"/>
+                        </dxlc:LayoutItem>
+                        <dxlc:LayoutItem Label="Trigger:">
+                            <dxe:ComboBoxEdit EditValue="{Binding CurrentAction.TriggerId}" ItemsSource="{Binding ActionTriggers}" ValueMember="Id" DisplayMember="Name"/>
+                        </dxlc:LayoutItem>
+                        <dxlc:LayoutItem Label="Status:">
+                            <dxe:ComboBoxEdit EditValue="{Binding CurrentAction.StatusId}" ItemsSource="{Binding ActionStatuses}" ValueMember="Id" DisplayMember="Name"/>
+                        </dxlc:LayoutItem>
+                        <dxlc:LayoutItem Label="ScheduledTime:">
+                            <dxe:TextEdit EditValue="{Binding CurrentAction.ScheduledTime}"/>
+                        </dxlc:LayoutItem>
+                        <dxlc:LayoutItem Label="DelegatedTo:">
+                            <dxe:ComboBoxEdit EditValue="{Binding CurrentAction.DelegatedTo}" ItemsSource="{Binding DelegatePersons}" ValueMember="Id" DisplayMember="Name" />
+                        </dxlc:LayoutItem>
+                            <dxlc:LayoutItem Label="IsActive:">
+                                <dxe:CheckEdit EditValue="{Binding CurrentAction.IsActive}"/>
+                            </dxlc:LayoutItem>
+                            <dxlc:LayoutItem Label="Comment:">
+                            <dxe:TextEdit EditValue="{Binding CurrentAction.Comment}"/>
+                        </dxlc:LayoutItem>
+                        <Button Content="Add action" Command="{Binding AddActionCommand}"/>
+                    </dxlc:LayoutGroup>
+                    </dxlc:LayoutGroup>
+                    <dxg:GridControl ItemsSource="{Binding Projects}" CurrentItem="{Binding SelectedProject,Mode=TwoWay}">
                         <dxg:GridControl.Columns>
                             <dxg:GridColumn FieldName="Name"/>
                             <dxg:GridColumn FieldName="DateCreated"/>
@@ -41,16 +74,49 @@
                             </dxg:GridColumn>
                         </dxg:GridControl.Columns>
                         <dxg:GridControl.DetailDescriptor>
-                            <dxg:DataControlDetailDescriptor ItemsSourcePath="Actions">
+                            <dxg:DataControlDetailDescriptor ItemsSourcePath="ActionsList">
                                 <dxg:DataControlDetailDescriptor.DataControl>
-                                    <dxg:GridControl>
+                                    <dxg:GridControl >
                                         <dxg:GridControl.Columns>
                                             <dxg:GridColumn FieldName="Name"/>
-                                            <dxg:GridColumn FieldName="ActionTriggerId"/>
-                                            <dxg:GridColumn FieldName="Status"/>
-                                            <dxg:GridColumn FieldName="DateCreated"/>
-                                            <dxg:GridColumn FieldName="ScheduledTime"/>
-                                            <dxg:GridColumn FieldName="DelegatedTo"/>
+                                            <dxg:GridColumn FieldName="TriggerId">
+                                                <dxg:GridColumn.EditSettings>
+                                                    <dxe:ComboBoxEditSettings ItemsSource="{Binding ActionTriggers}" ValueMember="Id" DisplayMember="Name"/>
+                                                </dxg:GridColumn.EditSettings>
+                                            </dxg:GridColumn>
+                                            <dxg:GridColumn FieldName="StatusId">
+                                                <dxg:GridColumn.EditSettings>
+                                                    <dxe:ComboBoxEditSettings  ItemsSource="{Binding ActionStatuses}" ValueMember="Id" DisplayMember="Name"/>
+                                                </dxg:GridColumn.EditSettings>
+                                            </dxg:GridColumn>
+                                            <dxg:GridColumn FieldName="DateCreated" ReadOnly="True"/>
+                                            <dxg:GridColumn FieldName="ScheduledTime">
+                                                <dxg:GridColumn.EditSettings>
+                                                    <dxe:DateEditSettings/>
+                                                </dxg:GridColumn.EditSettings>
+                                            </dxg:GridColumn>
+                                            <dxg:GridColumn FieldName="DelegatedTo">
+                                                <dxg:GridColumn.CellTemplate>
+                                                    <DataTemplate>
+                                                        <dxe:ComboBoxEdit x:Name="PART_Editor"   ItemsSource="{Binding Column.EditSettings.DataContext.DelegatePersons}" 
+                                                                               ValueMember="Id" DisplayMember="Name" 
+                                                                               >
+                                                            <dxe:ComboBoxEdit.Style>
+                                                                <Style TargetType="dxe:ComboBoxEdit">
+                                                                <Setter Property="IsEnabled" Value="False"/>
+                                                                <Style.Triggers>
+                                                                        <DataTrigger Binding="{Binding RowData.Row.StatusId,Converter={local:custConverter}}" Value="3">
+                                                                        <Setter Property="IsEnabled" Value="True"/>
+                                                                            <Setter Property="Tag" Value="testtag33"/>
+                                                                        </DataTrigger>
+                                                                </Style.Triggers>
+                                                            </Style>
+                                                        </dxe:ComboBoxEdit.Style>
+                                                    </dxe:ComboBoxEdit>
+                                                    </DataTemplate>
+                                                </dxg:GridColumn.CellTemplate>
+                                            </dxg:GridColumn>
+                                            <dxg:GridColumn FieldName="IsActive"/>
                                             <dxg:GridColumn FieldName="Comment"/>
                                         </dxg:GridControl.Columns>
                                     </dxg:GridControl>
@@ -62,65 +128,8 @@
                 </dxlc:LayoutGroup>
             </dx:DXTabItem>
             <dx:DXTabItem Header="Projects">
-                <dxlc:LayoutGroup Orientation="Vertical">
-                    <dxlc:LayoutGroup>
-
-                        <dxg:GridControl ItemsSource="{Binding Projects}" x:Name="projectGrid" CurrentItem="{Binding SelectedProject,Mode=TwoWay}">
-                            <dxg:GridControl.Columns>
-                                <dxg:GridColumn FieldName="Name"/>
-                                <dxg:GridColumn FieldName="DateCreated"/>
-                                <dxg:GridColumn FieldName="TypeId">
-                                    <dxg:GridColumn.EditSettings>
-                                        <dxe:ComboBoxEditSettings ItemsSource="{Binding ProjectTypes}" ValueMember="Id" DisplayMember="Name" />
-                                    </dxg:GridColumn.EditSettings>
-                                </dxg:GridColumn>
-                                <dxg:GridColumn FieldName="Comment"/>
-                                <dxg:GridColumn FieldName="StatusId">
-                                    <dxg:GridColumn.EditSettings>
-                                        <dxe:ComboBoxEditSettings ItemsSource="{Binding ProjectStatuses}" ValueMember="Id" DisplayMember="Name" />
-                                    </dxg:GridColumn.EditSettings>
-                                </dxg:GridColumn>
-                            </dxg:GridControl.Columns>
-                            <dxg:GridControl.View>
-                                <dxg:TableView AllowEditing="False"/>
-                            </dxg:GridControl.View>
-                        </dxg:GridControl>
-                        <dxlc:LayoutGroup Orientation="Vertical">
-                            <dxlc:LayoutItem Label="Name:">
-                                <dxe:TextEdit EditValue="{Binding CurrentAction.Name}"/>
-                            </dxlc:LayoutItem>
-                            <dxlc:LayoutItem Label="Trigger:">
-                                <dxe:ComboBoxEdit EditValue="{Binding CurrentAction.TriggerId}" ItemsSource="{Binding ActionTriggers}" ValueMember="Id" DisplayMember="Name"/>
-                            </dxlc:LayoutItem>
-                            <dxlc:LayoutItem Label="Status:">
-                                <dxe:ComboBoxEdit EditValue="{Binding CurrentAction.StatusId}" ItemsSource="{Binding ActionStatuses}" ValueMember="Id" DisplayMember="Name"/>
-                            </dxlc:LayoutItem>
-                            <dxlc:LayoutItem Label="ScheduledTime:">
-                                <dxe:TextEdit EditValue="{Binding CurrentAction.ScheduledTime}"/>
-                            </dxlc:LayoutItem>
-                            <dxlc:LayoutItem Label="DelegatedTo:">
-                                <dxe:ComboBoxEdit EditValue="{Binding CurrentAction.DelegatedTo}" ItemsSource="{Binding DelegatePersons}" ValueMember="Id" DisplayMember="Name" />
-                            </dxlc:LayoutItem>
-                            <dxlc:LayoutItem Label="Comment:">
-                                <dxe:TextEdit EditValue="{Binding CurrentAction.Comment}"/>
-                            </dxlc:LayoutItem>
-                            <Button Content="Add action" Command="{Binding AddActionCommand}"/>
-                        </dxlc:LayoutGroup>
-                    </dxlc:LayoutGroup>
-                    <dxg:GridControl ItemsSource="{Binding CurrentItem.ActionsList,ElementName=projectGrid}">
-                        <dxg:GridControl.Columns>
-                            <dxg:GridColumn FieldName="Name"/>
-                            <dxg:GridColumn FieldName="TriggerId"/>
-                            <dxg:GridColumn FieldName="StatusId"/>
-                            <dxg:GridColumn FieldName="DateCreated"/>
-                            <dxg:GridColumn FieldName="ScheduledTime"/>
-                            <dxg:GridColumn FieldName="DelegatedTo"/>
-                            <dxg:GridColumn FieldName="Comment"/>
-                        </dxg:GridControl.Columns>
-
-                    </dxg:GridControl>
-                </dxlc:LayoutGroup>
+                
             </dx:DXTabItem>
         </dx:DXTabControl>
     </Grid>
-</Window>
+</dx:DXWindow>
